[package]
name = "neb"
version = "0.0.2"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
quicli = "0.4"
structopt = "0.2"
fire = {git = "https://github.com/gosh-rs/fire.git", tag="v0.0.4"}
gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.19"}

[dev-dependencies]
approx = "0.3"
